[project]
name = "mentions_drugs"
version = "0.0.0"
description = "A validator that checks whether any drugs are mentioned in a given LLM-generated text."
authors = [
    {name = "Cartesia AI", email = "join@cartesia.ai"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.8.1"
dependencies = [
    "guardrails-ai>=0.4.0"
]

[project.optional-dependencies]
dev = [
    "pyright",
    "pytest",
    "ruff"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rP"
testpaths = [
    "test"
]

[tool.pyright]
include = ["validator"]
